--- a/index.html
+++ b/index.html
@@ -24,10 +24,10 @@ header {
     <p>
     <ul>
       <li><a href="#">Menu</a></li>
-      <li><a href="mateusz.html">Informatie</a></li>
-      <li><a href="#">Geschiedenis</a></li>
-      <li><a href="#">Persconferenties</a></li>
-      <li><a href="#">Video's</a></li>
+      <li><a href="informatie.html">Informatie</a></li>
+      <li><a href="geschiedenis.html">Geschiedenis</a></li>
+      <li><a href="persconferenties.html">Persconferenties</a></li>
+      <li><a href="videos.html">Video's</a></li>
     </ul>
     </p>
   </header>
